pov-check-health (0.10.2) UNRELEASED; urgency=medium

  * checkpidfiles: ignore /var/run/samba/samba.pid because of
    https://bugs.launchpad.net/ubuntu/+source/samba/+bug/1546418.

 -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Feb 2016 13:18:41 +0200

pov-check-health (0.10.1) precise; urgency=medium

  * checkinodes: handle non-existent filesystems (GH #14).
  * checkcert et al: reduce the default number of days before a warning to 30.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 05 Feb 2016 16:08:01 +0200

pov-check-health (0.10.0) precise; urgency=medium

  * check-health, check-web-health, check-ssl-health:
    - -h now explains the meanings of the options,
    - new option -c to force colorization of errors,
    - refactored the shared command-line parsing code into a new helper
      library (cmdline.sh).
  * Makefile: create generated files in build/ to avoid clutter.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 11 Nov 2015 12:08:14 +0200

pov-check-health (0.9.2) precise; urgency=medium

  * checkram: include buffers/cache in free memory calculation (GH #13).

 -- Marius Gedminas <marius@gedmin.as>  Wed, 04 Nov 2015 10:22:12 +0200

pov-check-health (0.9.1) precise; urgency=medium

  * check-ssl-certs: you can set CHECKCERT_WARN_BEFORE=n to change the default
    number of days before a warning is produced.

 -- Marius Gedminas <marius@gedmin.as>  Fri, 11 Sep 2015 08:27:34 +0300

pov-check-health (0.9.0) precise; urgency=medium

  * Fixed most shellcheck warnings.  This should've improved reliablility
    (especially if you have file or directory names with spaces in them), but
    might've introduced bugs.
  * New checks: checkcert, checkcert_imaps, checkcert_ssmtp.
  * New script: check-ssl-certs.

 -- Marius Gedminas <marius@gedmin.as>  Wed, 19 Aug 2015 10:44:21 +0300

pov-check-health (0.8.3) precise; urgency=medium

  * check-health -g: require 1G free disk space for partitions that have more
    than 1G free.
