@@ -2,8 +2,9 @@ pov-check-health (0.10.2) UNRELEASED; urgency=medium
 
   * checkpidfiles: ignore /var/run/samba/samba.pid because of
     https://bugs.launchpad.net/ubuntu/+source/samba/+bug/1546418.
+  * checkcert: support non-standard ports.
 
- -- Marius Gedminas <marius@gedmin.as>  Tue, 23 Feb 2016 13:18:41 +0200
+ -- Marius Gedminas <marius@gedmin.as>  Tue, 02 Aug 2016 08:51:35 +0300
 
 pov-check-health (0.10.1) precise; urgency=medium
 
